lab3/test_files/syntax_errors/littletest.java
public class Factorial{
    public static void main(String[] a){
        System.out.println(new QS().Start(10));
    }
}

class Element {
    public boolean Init(){
        int test = v_Age ;          
    }
}
